--- a/inventory1.yaml
+++ b/inventory1.yaml
@@ -1,5 +1,8 @@
 ---
 all:
   hosts:
-    centos-host:
-      ansible_host: 192.168.137.130
+    host1:
+      ansible_host: 52.221.193.157
+    host2:
+      ansible_host: 18.141.11.104
+      
